src/objects/c2g__codaPaymentBatch__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Holds information about different batches generated as part of a payment process.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorDescription__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Media Summary</label>
        <referenceTo>c2g__codaPaymentMediaSummary__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentReference__c</fullName>
        <label>Payment Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentSaveBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Save Batch</label>
        <referenceTo>c2g__codaPaymentBatch__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Summary</label>
        <referenceTo>c2g__codaPaymentAccountLineItem__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <summarizedField>c2g__codaPaymentBatchLineItem__c.c2g__TransactionValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentBatchLineItem__c.c2g__Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentBatchLineItem__c.c2g__PaymentBatch__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Selected__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post And Match</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Batch</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PBA{000000}</displayFormat>
        <label>Payment Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>